# darwinia-release

./: .gitignore  CHANGELOG
.github/: node.py  release.py  runtime-overridre.py  wasm.py
.github/workflows/: node.yml  release.yml  runtime-override.yml  wasm.yml  watch.yml
crab/digests/: crab-v6.3.0-tracing-runtime.json  crab-v6.3.1-tracing-runtime.json  crab-v6.3.2-tracing-runtime.json  crab-v6.3.3-tracing-runtime.json  crab-v6.3.4-tracing-runtime.json  crab-v6.4.0-1-tracing-runtime.json  crab-v6.4.0-2-tracing-runtime.json  crab-v6.4.0-3-tracing-runtime.json  crab-v6.4.0-4-tracing-runtime.json  crab-v6.4.0-tracing-runtime.json  crab-v6.5.0-1-tracing-runtime.json  crab-v6.5.0-tracing-runtime.json  crab-v6.5.1-1-tracing-runtime.json  crab-v6.5.1-tracing-runtime.json  crab-v6.6.0-tracing-runtime.json
crab/wasms/: crab-v6.3.0-tracing-runtime.compact.compressed.wasm  crab-v6.3.2-tracing-runtime.compact.compressed.wasm  crab-v6.3.3-tracing-runtime.compact.compressed.wasm  crab-v6.3.4-tracing-runtime.compact.compressed.wasm  crab-v6.4.0-1-tracing-runtime.compact.compressed.wasm  crab-v6.4.0-4-tracing-runtime.compact.compressed.wasm  crab-v6.5.0-1-tracing-runtime.compact.compressed.wasm  crab-v6.5.1-1-tracing-runtime.compact.compressed.wasm  crab-v6.6.0-tracing-runtime.compact.compressed.wasm
darwinia/digests/: darwinia-v6.3.0-tracing-runtime.json  darwinia-v6.3.4-tracing-runtime.json  darwinia-v6.4.0-1-tracing-runtime.json  (+9 more)
on-chain-version-watcher/: Cargo.toml
on-chain-version-watcher/src/: main.rs
whitelist-upgrade-hasher/: Cargo.toml
(+125 files in other folders)
