[package]
edition = "2021"
name    = "ocvw"
version = "0.8.4"

[dependencies]
# crates.io
anyhow   = { version = "1.0" }
regex    = { version = "1.10" }
serde    = { version = "1.0", features = ["derive"] }
subrpcer = { version = "0.11", features = ["ureq-client"] }
ureq     = { version = "2.9", features = ["json"] }
